RESOLVED FIXED19278
REGRESSION (r31114-r31132): image float disappears on refresh
https://bugs.webkit.org/show_bug.cgi?id=19278
Summary REGRESSION (r31114-r31132): image float disappears on refresh
Kevin M. Dean
Reported 2008-05-27 15:02:45 PDT
When viewing the link, scroll down to the Assessment & Scoring Capabilities bullets. To the right there should be an image float. It's likely there the first time you view. Now, refresh the page and it disappears. Selecting the address bar and pressing return brings it back. Also, clicking on a link to this page in a normal fashion draws it. It seems that the refresh process causes it not to render. Safari works fine and Webkit r31114 works. r31132 and later exhibits the issue.
Attachments
Reduction (365 bytes, text/html)
2008-05-27 22:35 PDT, mitz
no flags
Patch (without change log and layout test) (2.49 KB, patch)
2008-05-28 01:13 PDT, mitz
no flags
Patch (32.94 KB, patch)
2008-05-28 13:10 PDT, mitz
darin: review+
mitz
Comment 1 2008-05-27 22:35:10 PDT
Created attachment 21381 [details] Reduction
mitz
Comment 2 2008-05-28 01:13:43 PDT
Created attachment 21383 [details] Patch (without change log and layout test)
mitz
Comment 3 2008-05-28 11:56:46 PDT
mitz
Comment 4 2008-05-28 13:10:43 PDT
Darin Adler
Comment 5 2008-05-30 17:38:15 PDT
Comment on attachment 21399 [details] Patch I admit it: I was waiting for Hyatt to review. We have to get rid of those crazy DeprecatedPtrList! r=me
mitz
Comment 6 2008-05-30 23:29:40 PDT
Note You need to log in before you can comment on or make changes to this bug.