WebCore:

Reviewed by Darin Adler.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19278
          <rdar://problem/5968621> REGRESSION (r31114-r31132): image float disappears on refresh

        Test: fast/dynamic/float-in-trailing-whitespace-after-last-line-break.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren): Ensured that floats
        occurring in trailing whitespace after a line break are added to the
        last line's floats vector.

LayoutTests:

        Reviewed by Darin Adler.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19278
          <rdar://problem/5968621> REGRESSION (r31114-r31132): image float disappears on refresh

        * fast/dynamic/float-in-trailing-whitespace-after-last-line-break.html: Added.
        * platform/mac/fast/dynamic/float-in-trailing-whitespace-after-last-line-break-expected.checksum: Added.
        * platform/mac/fast/dynamic/float-in-trailing-whitespace-after-last-line-break-expected.png: Added.
        * platform/mac/fast/dynamic/float-in-trailing-whitespace-after-last-line-break-expected.txt: Added.



Canonical link: https://commits.webkit.org/26741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34277 268f45cc-cd09-0410-ab3c-d52691b4dbfc